--- a/.travis.yml
+++ b/.travis.yml
@@ -30,16 +30,20 @@ matrix:
           sudo: required
           env: TOXENV=python3.7
 
+        - os: linux
+          python: 3.6
+          env: TOXENV=cov
+          after_success:
+              - pip install pytest-cov --upgrade
+              - python setup.py test --addopts "-v --cov msgfy --cov-report term-missing"
+              - coveralls
+
 install:
     - pip install setuptools --upgrade
-    - pip install tox coveralls
+    - pip install tox
 
 script:
     - tox
-    - python setup.py test --addopts "-v --cov msgfy --cov-report term-missing"
-
-after_success:
-    - coveralls
 
 notifications:
     slack:
