--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,10 @@ matrix:
       env: TOXENV=py38
 
     - os: linux
-      python: 3.6
+      python: 3.7
       env: TOXENV=cov
       after_success:
-        - travis_retry pip install pytest-cov coveralls --upgrade
-        - python setup.py test --addopts "-v --cov msgfy --cov-report term-missing"
+        - travis_retry pip install coveralls
         - coveralls
 
     - os: osx
