--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,21 @@ exclude = """
 | docs/conf.py
 | setup.py
 """
+
+[tool.coverage.run]
+source = ['msgfy']
+branch = true
+
+[tool.coverage.report]
+show_missing = true
+precision = 1
+exclude_lines = [
+    'except ImportError',
+    'raise NotImplementedError',
+    'pass',
+    'ABCmeta',
+    'abstractmethod',
+    'abstractproperty',
+    'abstractclassmethod',
+    'warnings.warn',
+]
