--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,18 @@
 [tox]
-envlist = py{27,35,36,37,38},cov
+envlist =
+    py{27,35,36,37,38}
+    cov
 
 [testenv]
 deps =
     pytest
 commands =
     python setup.py test
+
+[testenv:cov]
+deps =
+    .[test]
+    coverage[toml]
+    pytest-cov
+commands =
+    python setup.py test --addopts "-v --cov"
