--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,9 @@ envlist =
 
 [testenv]
 deps =
-    pytest
+    .[test]
 commands =
-    python setup.py test
+    pytest {posargs}
 
 [testenv:cov]
 deps =
@@ -15,4 +15,4 @@ deps =
     coverage[toml]
     pytest-cov
 commands =
-    python setup.py test --addopts "-v --cov"
+    pytest --cov {posargs:-vv}
