--- a/pylama.ini
+++ b/pylama.ini
@@ -1,5 +1,5 @@
 [pylama]
-skip = .eggs/*,.tox/*,*/.env/*,build/*,node_modules/*,_sandbox/*,build/*,docs/conf.py,msgfy/_six.py
+skip = .eggs/*,.tox/*,*/.env/*,build/*,node_modules/*,_sandbox/*,build/*,docs/conf.py
 
 [pylama:pycodestyle]
 max_line_length = 100
