--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,23 @@
 [tox]
 envlist =
     py{35,36,37,38}
+    pypy3
+    clean
     cov
+    fmt
+    lint
 
 [testenv]
 deps =
     .[test]
 commands =
     pytest {posargs}
+
+[testenv:clean]
+deps =
+    cleanpy
+commands =
+    cleanpy --all --exclude-envs .
 
 [testenv:cov]
 deps =
@@ -16,3 +26,26 @@ deps =
     pytest-cov
 commands =
     pytest --cov {posargs:-vv}
+
+[testenv:fmt]
+basepython = python3.8
+deps =
+    autoflake
+    black
+    isort[pyproject]
+commands =
+    autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports --exclude ".pytype" .
+    isort --apply --recursive
+    black setup.py test msgfy
+
+[testenv:lint]
+basepython = python3.7
+deps =
+    codespell
+    mypy>=0.761
+    pylama
+commands =
+    python setup.py check
+    mypy msgfy --show-error-context --show-error-codes --python-version 3.5
+    codespell msgfy examples test -q2 --check-filenames
+    pylama
