Fix installation for osx env

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,7 @@ matrix:
       env: TOXENV=py37
 
 install:
-  - travis_retry pip install setuptools --upgrade
-  - travis_retry pip install tox
+  - travis_retry bash -x .travis/install.sh
 
 script:
   - python --version
