--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist =
     py{35,36,37,38}
     pypy3
+    build
     clean
     cov
     fmt
@@ -18,6 +19,17 @@ deps =
     cleanpy
 commands =
     cleanpy --all --exclude-envs .
+
+[testenv:build]
+basepython = python3.8
+deps =
+    twine
+    wheel
+commands =
+    python setup.py sdist bdist_wheel
+    twine check dist/*.whl
+    twine check dist/*.tar.gz
+    python setup.py clean --all
 
 [testenv:cov]
 deps =
