--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ commands =
     pytest {posargs}
 
 [testenv:clean]
+skip_install = true
 deps =
     cleanpy
 commands =
@@ -41,6 +42,7 @@ commands =
 
 [testenv:fmt]
 basepython = python3.8
+skip_install = true
 deps =
     autoflake
     black
@@ -52,6 +54,7 @@ commands =
 
 [testenv:lint]
 basepython = python3.7
+skip_install = true
 deps =
     codespell
     mypy>=0.761
