--- a/tox.ini
+++ b/tox.ini
@@ -46,10 +46,10 @@ skip_install = true
 deps =
     autoflake
     black
-    isort[pyproject]
+    isort>=5
 commands =
     autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports --exclude ".pytype" .
-    isort --apply --recursive
+    isort .
     black setup.py test msgfy
 
 [testenv:lint]
