--- a/tox.ini
+++ b/tox.ini
@@ -61,6 +61,6 @@ deps =
     pylama
 commands =
     python setup.py check
-    mypy msgfy --show-error-context --show-error-codes --python-version 3.5
+    mypy msgfy
     codespell msgfy examples test -q2 --check-filenames
     pylama
