--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands =
 [testenv:clean]
 skip_install = true
 deps =
-    cleanpy
+    cleanpy>=0.3.1
 commands =
     cleanpy --all --exclude-envs .
 
