--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ exclude = '''
 )/
 | docs/conf.py
 '''
+target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
 
 [tool.coverage.run]
 source = ['msgfy']
