--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -57,9 +57,9 @@ jobs:
           # tox -e cov -- --discord-verbose=0  # reduce verbosity level of summary that send to discord
 
       - name: Upload coverage report
+        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
         run: |
-          python -m pip install --upgrade --disable-pip-version-check coveralls
+          python -m pip install --upgrade --disable-pip-version-check coveralls tomli
           coveralls --service=github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
