--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,8 @@ envlist =
     lint
 
 [testenv]
-deps =
-    .[test]
+extras =
+    test
 commands =
     pytest {posargs}
 
@@ -32,8 +32,9 @@ commands =
     python setup.py clean --all
 
 [testenv:cov]
+extras =
+    test
 deps =
-    .[test]
     coverage[toml]>=5
 commands =
     coverage run -m pytest {posargs:-vv}
