--- a/tox.ini
+++ b/tox.ini
@@ -22,13 +22,12 @@ commands =
 
 [testenv:build]
 deps =
+    build>=0.10
     twine
     wheel
 commands =
-    python setup.py sdist bdist_wheel
-    twine check dist/*.whl
-    twine check dist/*.tar.gz
-    python setup.py clean --all
+    python -m build
+    twine check dist/*.whl dist/*.tar.gz
 
 [testenv:cov]
 extras =
