Update deps of testenvs

--- a/tox.ini
+++ b/tox.ini
@@ -41,8 +41,8 @@ commands =
 [testenv:fmt]
 skip_install = true
 deps =
-    autoflake
-    black
+    autoflake>=2
+    black>=23.1
     isort>=5
 commands =
     autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports --exclude ".pytype" .
@@ -52,9 +52,9 @@ commands =
 [testenv:lint]
 skip_install = true
 deps =
-    codespell
-    mypy>=0.902
-    pylama
+    codespell>=2
+    mypy>=1
+    pylama>=8.4.1
 commands =
     python setup.py check
     mypy msgfy
